[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "jma_wireless/hostutil/__init__.py"

[project]
authors = [
  {author = "Connor Sherwood Maynes", email = "connormaynes@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: System :: Networking",
]
dependencies = ["netifaces", "python_hosts", "opentelemetry-api"]
description = "hostname/address parsers/validators/utils for handling user inputs which could be either."
dynamic = ["version", "readme"]
keywords = ["hostname", "host", "address", "ip", "networking", "ipv4", "ipv6"]
maintainers = []
name = "jma-wireless-hostutil"

[tool.setuptools.dynamic]
readme = {file = "README.md"}
version = {attr = "jma_wireless.hostutil.__version__"}

[project.optional-dependencies]
dev = ["black"]
test = []

[project.scripts]
[project.gui-scripts]
