[metadata]
name = jma-wireless-hostutil
version = attr: hostutil.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = hostname/address parsers/validators/utils for handling user inputs which could be either.
url = https://github.com/ConnorSMaynes/hostutil
license = MIT
keywords =
	hostname
	host
	address
	ip
	networking
	ipv4
	ipv6
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
	Topic :: System :: Networking

[options]
packages = find:
python_requires = >=3.6
install_requires =
	netifaces
	python_hosts
	opentelemetry-api
